fixed next button visibility

--- a/www/styles/main.css
+++ b/www/styles/main.css
@@ -125,7 +125,6 @@ br {
     font-size: 12px;
     margin-top: -25px;
     margin-right: 3px;
-    visibility: hidden;
 }
 
 #step-name-label {
